--- a/tercer_parcial/package.json
+++ b/tercer_parcial/package.json
@@ -1,9 +1,17 @@
 {
+  "name": "my-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/app.js",
+  "type": "module", 
+  "scripts": {
+    "start": "node src/app.js"
+  },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "express-validator": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1"
+    "express": "^4.18.2",
+    "dotenv": "^16.1",
+    "jsonwebtoken": "^9.0.0",
+    "express-validator": "^6.15.0",
+    "pg": "^8.11.1"
   }
 }
